# katana-ci

./: .env_example  .gitignore  Cargo.toml  README.md
.github/workflows/: example.yml
examples/: e2e.rs
examples/contracts/: c1.compiled_contract_class.json  c1.contract_class.json
migrations/: 0_default.sql
src/: db.rs  docker_manager.rs  extractors.rs  handlers.rs  main.rs
