[package]
name = "katana-proxifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
shiplift = "0.7"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
thiserror = "1.0.40"
regex = "1.10"
futures-util = "0.3"
