[package]
name = "katana-ci"
description = "A docker container manager to start/stop Katana instances."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros", "headers"] }
axum-extra = "0.7.7"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"
regex = "1.10"
serde = "1.0"
shiplift = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
anyhow = "1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.99", features = ["preserve_order"] }
serde_with = "2.3.3"
starknet = "0.6.0"
url = "2.4"